# permissionless-onchian-orderbook

./: .gitignore  AUTO_MATCHING.md  Account.sol  BSC_COST_ANALYSIS.md  GAS_OPTIMIZATION.md  GAS_REPORT.md  IAccount.sol  ISequencer.sol  MATCH_PREDICTION.md  Makefile  MockERC20.sol  ORDERBOOK_APP.md  OrderBook.sol  QUICKSTART_MATCHER.md  README.md  REMOVE_ORDER_GUIDE.md  Sequencer.sol  TESTING_GUIDE.md  TEST_EVENTS.md  TradingConstants.sol  deployments.json  foundry.toml  hardhat.config.js  monitor_events.sh  package.json  place_orders.sh  process_remaining.sh  setup_foundry.sh  test_gas.sh  test_manual_orders.sh  test_matcher.sh  test_orderbook.js  update_config.js  verify_results.sh
doc/: ACCOUNT_SYSTEM.md  BATCH_PROCESSING_GUIDE.md  DEPLOYMENT.md  FOUNDRY_QUICKSTART.md  MATCHING_EXAMPLES.md  QUICKSTART.md  QUICKSTART_MATCHER.md  README_FOUNDRY.md  README_TEST.md  START_HERE.md
matcher/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md  build.rs  config.toml.example  rust-toolchain.toml
matcher/abi/: Account.json  OrderBook.json  Sequencer.json
matcher/src/: config.rs  contracts.rs  main.rs  match_simulator.rs  matcher.rs  orderbook_simulator.rs  state.rs  sync.rs  types.rs
orderbook-app/: .gitignore  APP_ARCHITECTURE.md  App.js  QUICKSTART.md  README.md  app.json  config.js  index.html  package.json  update-config.sh
orderbook-app/src/: App.css  App.jsx  (+1 more)
script/: Deploy.s.sol  PlaceMatchingOrders.s.sol  PlaceTestOrders.s.sol  PrepareTest.s.sol  TestMarketBuy.s.sol
test/: AutoMatching.t.sol  GasTest.t.sol  OrderBook.t.sol  OrderBook.test.js
(+34 files in other folders)
